cvs в идее объявился, игнорим

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ out/production/Catch_The_Drop/ru/geekbrains/catch_the_drop/GameWindow$1.class
 out/production/Catch_The_Drop/ru/geekbrains/catch_the_drop/GameWindow$GameField.class
 
 out/production/Catch_The_Drop/ru/geekbrains/catch_the_drop/drop.png
+
+.idea/vcs.xml
