--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ out/production/Catch_The_Drop/ru/geekbrains/catch_the_drop/GameWindow$GameField.
 out/production/Catch_The_Drop/ru/geekbrains/catch_the_drop/drop.png
 
 .idea/vcs.xml
+
+.idea/artifacts/Catch_The_Drop_jar.xml
+
+out/production/Catch_The_Drop/META-INF/MANIFEST.MF
+
+src/META-INF/MANIFEST.MF
